kubernetes/kanban-board-project/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      restartPolicy: Always            
      containers:
      - name: kanban-app
        image: kanban-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
