kubernetes/kanban-board-project/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-postgres
  template:
    metadata:
      labels:
        app: kanban-postgres
    spec:
      restartPolicy: Always
      volumes:
        - name: kanban-data
          emptyDir: {}
      containers:
      - name: kanban-postgres
        image: postgres:9.6-alpine
        volumeMounts:
          - name: kanban-data
            mountPath: /var/lib/postgresql/data
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
