kubernetes/kanban-board-project/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app
spec:
  selector:
    app: kanban-app
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
