kubernetes/kanban-board-project/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-postgres
spec:
  selector:
    app: kanban-postgres
  type: ClusterIP                      
  ports:
  - port: 5432
    targetPort: 5432
