kubernetes/kanban-board-project/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
spec:
  ingressClassName: nginx 
  rules:
  - host: kanban-app.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kanban-app
            port:
              number: 8080
